[gd_scene load_steps=4 format=2]

[ext_resource path="res://Attacks/DramaAttacks/HandKnivesAttack/dr_attack1.gd" type="Script" id=1]
[ext_resource path="res://player/KinematicHeart.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -492.533, -174.281, 492.533, 174.281, 381.962, 401.351, 0, 0, 0, 0, 712.996, 445.946, 286.338, -11.1038, -286.338, 11.1038, 927.426, 261.622, 0, 0, 0, 0, 827.944, 234.851, 331.236, 99.121, -331.236, -99.121, 840.317, 44.5946, 65.7286, -58.5135, -65.7286, 58.5135, 445.623, 107.027, 0, 0, 0, 0, 381.962, 401.351 )
}

[node name="DramaAttack1" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 520, 300 )

[node name="KnifePath" type="Path2D" parent="."]
position = Vector2( 260, 150 )
scale = Vector2( 0.384895, 0.549451 )
curve = SubResource( 1 )

[node name="KnifeSpawnLocation" type="PathFollow2D" parent="KnifePath"]
position = Vector2( 381.962, 401.351 )
rotation = 0.33973

[node name="KinematicHeart" parent="." instance=ExtResource( 2 )]
position = Vector2( 510, 290 )
